i fixed problems with the overflow and i added a property with value in mixins parameters

--- a/assets/scss/mixins.scss
+++ b/assets/scss/mixins.scss
@@ -1,3 +1,6 @@
-@mixin base {
+@mixin base($property: null, $value: null) {
+    @if($property !=null) {
+        #{$property}: $value
+    }
     color: black;
 }
